--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Privacy Policy";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Monitor da COVID-19</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-
+<h3>
+    <img src="covid.png" width="50" class="d-inline-block align-top" alt="">
+    Monitoramento de Casos de COVID-19
+</h3>
 
 <table class="table">
   <thead>
@@ -19,12 +18,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
+      @foreach(var pais in (List<Pais>)ViewData["Paises"])
+      {
+        <tr>
+            <th scope="row">@pais.Nome</th>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+      }
   </tbody>
 </table>
