--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,7 +22,11 @@
     {
     <tr>
       <th scope="row">@i.InfeccaoId</th>
-      <td>@i.Pais.Nome</td>
+      <td>
+        <a href="https://www.google.com/search?channel=fs&q=@i.Pais.Nome+covid+19&ie=utf-8&oe=utf-8">
+        @i.Pais.Nome
+        </a>
+      </td>
       <td>@i.CasosConfirmados</td>
       <td>@i.Mortes</td>
       <td>@i.Recuperados</td>
