--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">
+                                <img src="https://cdn1.iconfinder.com/data/icons/ios-11-glyphs/30/key-512.png" style="width: 20px;">
                                 Admin
                             </a>
                         </li>
