--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Monitor da COVID-19</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+      <b>Atenção</b>: Estes são dados fictícios. Para ver mais informações, <a href="https://news.google.com/covid19/map?hl=pt-BR&gl=BR&ceid=BR:pt-419">clique aqui</a>
+    </p>
 </div>
 
 <table class="table table-bordered table-striped mb-0">
