--- a/Views/Home/Sobre.cshtml
+++ b/Views/Home/Sobre.cshtml
@@ -1,6 +1,32 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Sobre";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Trabalho de Laboratório de Desenvolvimento de Aplicações Móveis e Distribuídas</p>
+<style>
+    .jumbotron{
+        background-color: white;
+    }
+</style>
+
+<div class="jumbotron">
+  <h1 class="display-4">Sobre</h1>
+  <p class="lead">PUC Minas</p>
+  <p class="lead">Engenharia de Software</p>
+  <p class="lead">Trabalho para a disciplina de Laboratório de Desenvolvimento de Aplicações Móveis e Distribuídas</p>
+  <hr class="my-4">
+  <p>Este trabalho visa demonstrar a quantidade de casos</p>
+
+  <p><strong>Integrantes:</strong></p>
+  <ul>
+      <li>
+        <span>Caique Ribeiro de Oliveira</span>
+      </li>
+      <li>
+        <span>Lucas Branco Laborne Tavares</span>
+      </li>
+  </ul>
+  
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Voltar para a home</a>
+  </p>
+</div>
