--- a/Views/Home/Sobre.cshtml
+++ b/Views/Home/Sobre.cshtml
@@ -9,13 +9,16 @@
 </style>
 
 <div class="jumbotron">
-  <h1 class="display-4">Sobre</h1>
-  <p class="lead">PUC Minas</p>
-  <p class="lead">Engenharia de Software</p>
-  <p class="lead">Trabalho para a disciplina de Laboratório de Desenvolvimento de Aplicações Móveis e Distribuídas</p>
+  <h4 class="display-4">Sobre</h4>
   <hr class="my-4">
-  <p>Este trabalho visa demonstrar a quantidade de casos</p>
-
+  <p class="lead"><b>Pontifícia Universidade Católica de Minas Gerais - Engenharia de Software</b></p>
+  <p class="lead">Trabalho realizado para a disciplina de Laboratório de Desenvolvimento de Aplicações Móveis e Distribuídas</p>
+  <p><strong>Professor:</strong></p>
+  <ul>
+      <li>
+        <span>Hugo de Paula</span>
+      </li>
+  </ul>
   <p><strong>Integrantes:</strong></p>
   <ul>
       <li>
@@ -25,7 +28,7 @@
         <span>Lucas Branco Laborne Tavares</span>
       </li>
   </ul>
-  
+  <hr class="my-4">
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Voltar para a home</a>
   </p>
