--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -2,16 +2,70 @@
     ViewData["Title"] = "Admin";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<form method="POST">
+@* <div class="row">
+  <div class="col-5">
+    <form method="POST">
   <div class="form-group">
-    <label for="exampleInputPassword1">Senha de admin: </label>
-    <input type="password" name="senha" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+        <label for="exampleInputPassword1">Senha de admin: </label>
+        <input type="password" name="senha" class="form-control" placeholder="Senha">
+      </div>
+      <input class="btn btn-primary" type="submit" value="Entrar" />
+      @if (ViewData["SenhaInvalida"] != null && (bool)ViewData["SenhaInvalida"]){
+        <br>
+        <span style="color: red">Senha Inválida</span>
+      }
+    </form>
   </div>
-  <input class="btn btn-primary" type="submit" value="Entrar" />
-@if (ViewData["SenhaInvalida"] != null && (bool)ViewData["SenhaInvalida"]){
-  <br>
-  <span style="color: red">Senha Inválida</span>
-}
-</form>
+</div>  *@
+
+
+
+<style type="text/css">
+	.login-form {
+	  	width: 440px;
+    	margin: 70px auto;
+	}
+  .login-form form {
+    	margin-bottom: 15px;
+        background: rgb(255, 255, 255);
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+        padding: 30px;
+   }
+   .login-form h2 {
+        margin: 0 0 25px;
+    }
+    .form-control, .btn {
+        min-height: 38px;
+        border-radius: 2px;
+    }
+    .btn {        
+        font-size: 15px;
+        font-weight: bold;
+    }
+</style>
+
+<div class="login-form">
+    <form method="POST">
+        <h2 class="text-center">
+          <img src="/chave.png" style="width: 40px">
+          Login
+        </h2> 
+        <p>Você precisa fazer o login para continuar.</p> 
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Admin" required="required" disabled>
+        </div>
+        <div class="form-group">
+            <input type="password" name="senha" class="form-control" placeholder="Senha" required="required">
+        </div>
+        <div class="form-group">
+          <input class="btn btn-primary btn-block" type="submit" value="Entrar" />
+          @if (ViewData["SenhaInvalida"] != null && (bool)ViewData["SenhaInvalida"]){
+            <br>
+            <span style="color: red">Senha Inválida</span>
+          }
+        </div>
+    </form>
+</div>
+
+<hr>
