--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 </div>
                 <div class="nav-item d-flex flex-row-reverse bd-highlight">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">
-                                <img src="https://cdn1.iconfinder.com/data/icons/ios-11-glyphs/30/key-512.png" style="width: 20px;">
+                                <img src="/chave.png" style="width: 20px;">
                                 Admin
                             </a>
 
