--- a/Views/Home/Sobre.cshtml
+++ b/Views/Home/Sobre.cshtml
@@ -16,7 +16,7 @@
   <p><strong>Professor:</strong></p>
   <ul>
       <li>
-        <span>Hugo de Paula</span>
+        <span>Hugo Bastos de Paula</span>
       </li>
   </ul>
   <p><strong>Integrantes:</strong></p>
